src/objects/OpptyTeamMembers_for_RSM__mdt/OpptyTeamMembers_for_RSM__mdt.object-meta.xml
<CustomObject>
    <label>OpptyTeamMembers for RSM</label>
    <pluralLabel>OpptyTeamMembers for RSMs</pluralLabel>
</CustomObject>