src/objects/OpptyTeamMembers_for_RSM__mdt/fields/RSMEmail__c.field-meta.xml
<CustomField>
    <fullName>RSMEmail__c</fullName>
    <label>RSM Email</label>
    <type>Email</type>
</CustomField>