src/objects/OpptyTeamMembers_for_RSM__mdt/fields/TeamMemberEmail__c.field-meta.xml
<CustomField>
    <fullName>TeamMemberEmail__c</fullName>
    <label>Team Member Email</label>
    <type>Email</type>
</CustomField>